# one-runtime

./: .earthignore  .gitignore  AGENTS.md  Cargo.toml  Earthfile  Justfile  README.md  nails-tmux.sh
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  pull-request.yml  release-candidate.yml  release.yml
crates/db/: Cargo.toml  Justfile  README.md
crates/db-gen/: Cargo.toml
crates/db-gen/src/: queries.rs  types.rs
crates/db-gen/src/queries/: agents.rs  auth.rs  billing.rs  channels.rs  channels_list.rs  hosted_connections.rs  integration_connections.rs  integrations.rs  oauth_clients.rs  orgs.rs  providers.rs
crates/db/migrations/: 20260301162355_auth_schema.sql  20260302075700_org_schema.sql  20260303131150_providers.sql  20260303131151_resource_visibility.sql  20260303131152_agents.sql  20260303131153_conversations.sql  20260303134005_channels.sql  20260303134424_integrations.sql  20260305110732_uuid-b64url-functions.sql  20260311094850_llm-usage-billing.sql  20260314132633_org-billing-topups.sql  20260320090000_mcp_api_keys.sql  20260321092850_openapi-specs.sql  20260321101609_integration-catalog-metadata.sql  20260322110000_oauth_clients.sql  20260322123000_oauth_clients_unique_provider.sql  20260322150000_hosted_connection_sessions.sql
crates/db/queries/: agents.sql  auth.sql  billing.sql  channels.sql  channels_list.sql  hosted_connections.sql  integration_connections.sql  integrations.sql  oauth_clients.sql  orgs.sql  providers.sql
crates/db/src/: lib.rs
crates/mcp-app/: Cargo.toml  README.md
crates/mcp-app/src/: app.rs  handler.rs  main.rs  protocol.rs  widget.rs
crates/mcp-app/src/widget/: hello.html
crates/one-runtime/: Cargo.toml
crates/one-runtime-assets/: Cargo.toml  README.md  build.rs  input.css
crates/one-runtime-com/: Cargo.toml
crates/one-runtime-com/open-api-specs/crypto/: blockchain-ticker.yaml
crates/one-runtime-com/src/: generator.rs  main.rs  ui_links.rs
crates/one-runtime-islands/: Cargo.toml  README.md
crates/one-runtime-islands/src/: modal.rs
crates/one-runtime-ui/: Cargo.toml  README.md
crates/one-runtime-ui/src/: base_layout.rs  layout.rs  lib.rs  routes.rs
crates/one-runtime-ui/src/agents/: page.rs
crates/one-runtime-ui/src/api_keys/: api_key_row.rs  page.rs
crates/one-runtime-ui/src/billing/: page.rs
crates/one-runtime-ui/src/channels/: page.rs
crates/one-runtime-ui/src/components/: card_item.rs  mod.rs  section_introduction.rs
crates/one-runtime-ui/src/connections/: mod.rs  new.rs  page.rs
crates/one-runtime-ui/src/integrations/: card.rs  mod.rs  modal.rs  page.rs  upsert.rs
crates/one-runtime-ui/src/providers/: mod.rs  new.rs  page.rs
crates/one-runtime/plugins/: bitcoin.yaml
crates/one-runtime/src/: authz.rs  config.rs  errors.rs  main.rs  static_files.rs  stripe.rs
crates/one-runtime/src/handlers/: mod.rs
crates/one-runtime/src/handlers/agents/: loaders.rs
crates/one-runtime/src/handlers/api_keys/: actions.rs  loaders.rs
crates/one-runtime/src/handlers/billing/: actions.rs  loaders.rs
crates/one-runtime/src/handlers/channels/: actions.rs  loaders.rs
crates/one-runtime/src/handlers/connections/: actions.rs  loaders.rs
crates/one-runtime/src/handlers/integrations/: actions.rs  loaders.rs
crates/one-runtime/src/handlers/providers/: actions.rs  loaders.rs
crates/one-runtime/src/handlers/root/: loaders.rs  mod.rs
crates/one-runtime/src/mcp/: mod.rs  tools.rs
crates/static-website/: Cargo.toml  Justfile  README.md  cloudflare-build.sh  generate-tailwind-input.sh  input.css  site-tmux.sh
crates/static-website/assets/: demo.cast  scroll-story.js
crates/static-website/content/blog/agentic-sandboxes/: index.md
crates/static-website/content/docs/getting-started/: index.md
crates/static-website/content/docs/integrations/: fetching-integrations.md  fetching-the-catalog.md
crates/static-website/open-api-specs/: airtable.yaml
crates/static-website/open-api-specs/google/: drive.yaml
crates/static-website/src/: blog_summary.rs  docs_summary.rs  generator.rs  main.rs  open_api_specs.rs  ui_links.rs
crates/static-website/src/components/: homepage_architecture_section.rs  homepage_hero_section.rs  homepage_quick_start_section.rs  homepage_story_section.rs  mod.rs
crates/static-website/src/pages/: index.rs  integrations.rs  mod.rs  open_api_specs.rs  pricing.rs
crates/tool-runtime/: Cargo.toml
crates/tool-runtime/src/: fetch_url.rs  lib.rs  monty_python.rs  openapi_actions.rs
crates/web-assets/: .gitignore  Cargo.toml  README.md  input.css
crates/web-islands/: Cargo.toml  README.md
crates/web-islands/src/: lib.rs  public_connect.rs  snackbar.rs
crates/web-server/: Cargo.toml  README.md
crates/web-server/src/: authz.rs  config.rs  jwt.rs  main.rs  static_files.rs
crates/web-server/src/handlers/: mod.rs
crates/web-server/src/handlers/api_keys/: actions.rs  loaders.rs  mod.rs
crates/web-server/src/handlers/hosted_connections/: actions.rs  loaders.rs  mod.rs  support.rs
crates/web-server/src/handlers/integrations/: actions.rs  loaders.rs  mod.rs
crates/web-server/src/handlers/oauth_clients/: actions.rs  loaders.rs  mod.rs
crates/web-server/src/handlers/root/: loaders.rs  mod.rs
crates/web-server/src/mcp/: auth.rs  handler.rs  mod.rs
crates/web-ui/: Cargo.toml  README.md
crates/web-ui/src/: base_layout.rs  layout.rs  lib.rs  routes.rs
examples/: README.md
examples/rust/: Cargo.toml  README.md  rig.rs
infra-as-code/: stack.yaml
scripts/: README.md  build-islands  nails  tailwind-crates
wireframe/: README.md  api-keys.html  app.js  byo-oauth-confirm.html  byo-oauth-setup.html  connect-gmail.html  empty-state.html  gmail-activity.html  gmail-connected.html  how-connections-work.html  index.html  input.css  item-detail.html  items.html  managed-oauth-confirm.html  oauth-configuration.html  overview.html  projects.html  provider-required.html  provider-secret-detail.html  providers.html  settings.html  system-admin.html  wireframe-tmux.sh
wireframe/openapi/open-api-specs/: appollo.yaml  dropbox.yaml
(+20 files in other folders)
