[workspace]
members = [
    "crates/agent-octo-com",
    "crates/tool-runtime",
    "crates/agent-runtime",
    "crates/channels",
    "crates/octo-assets",
    "crates/octo-ui",
    "crates/octo",
    "crates/db", "crates/octo-islands",
]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
dotenvy = "0.15.7"
monty = { git = "https://github.com/pydantic/monty", rev = "24dad05" }
native-tls = { version = "0.2.18", features = ["vendored"] }
oas3 = { version = "0.20.1", features = ["yaml-spec"] }
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls"] }
rig-core = "0.32.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
teloxide = { version = "0.17.0", default-features = false, features = ["rustls", "ctrlc_handler"] }
thiserror = "2.0.12"
tokio = "1.50.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
