[workspace]
members = [
    "examples/rust",
    "crates/static-website",
    "crates/tool-runtime",
    "crates/web-assets",
    "crates/web-ui",
    "crates/web-server",
    "crates/db",
    "crates/web-islands",
]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
dotenvy = "0.15.7"
monty = { git = "https://github.com/pydantic/monty", rev = "24dad05" }
native-tls = { version = "0.2.18", features = ["vendored"] }
oas3 = { version = "0.20.1", features = ["yaml-spec"] }
rand = "0.10.0"
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls", "json"] }
rig-core = "0.32.0"
rmcp = { version = "1.2.0", features = ["server", "schemars", "transport-streamable-http-server"] }
schemars = "1.0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
teloxide = { version = "0.17.0", default-features = false, features = ["rustls", "ctrlc_handler"] }
thiserror = "2.0.12"
tokio = "1.51.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
