[package]
name = "mcp-app"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true, features = ["json", "http1", "tokio"] }
dotenvy.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
