[package]
name = "octo-islands"
version = "0.1.0"
edition = "2024"


[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.91"
wasm-bindgen = "0.2.114"
web-sys = { version = "0.3.91", features = ["Document", "Element", "Event", "EventTarget", "Node", "Window", "console"] }

[features]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dev-dependencies]
wasm-bindgen-test = "0.3.64"
