[package]
name = "tool-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
monty.workspace = true
oas3.workspace = true
reqwest.workspace = true
rig-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
