[package]
name = "web-islands"
version = "0.1.0"
edition = "2024"


[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22.1"
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.91"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"
wasm-bindgen = "0.2.114"
wasm-bindgen-futures = "0.4.54"
web-sys = { version = "0.3.91", features = ["Document", "DomStringMap", "DomTokenList", "Element", "Event", "EventTarget", "Headers", "HtmlDocument", "HtmlInputElement", "Location", "Node", "Request", "RequestInit", "Response", "Window", "console"] }

[features]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dev-dependencies]
wasm-bindgen-test = "0.3.64"
