[package]
name = "web-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
axum = { version = "0.8", default-features = false, features = ["json", "http1", "tokio"] }
axum-extra = { version = "0.12", features = ["form", "typed-routing"] }
base64 = "0.22.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clorinde = { version = "0.0.0", path = "../db-gen" }
db = { path = "../db" }
dotenvy.workspace = true
hmac = "0.13"
hex = "0.4"
web-assets = { path = "../web-assets" }
web-ui = { path = "../web-ui" }
oas3.workspace = true
rand.workspace = true
reqwest.workspace = true
rmcp.workspace = true
schemars.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
sha2 = "0.11"
tokio = { features = ["fs", "macros", "rt-multi-thread"], version = "1", default-features = false }
tokio-util = { version = "0.7", default-features = false, features = ["io"] }
tool-runtime = { path = "../tool-runtime" }
tower-livereload = "0.10"
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = "1"
validator = { version = "0.20", features = ["derive"] }
